--- a/app/src/main/res/layout/activity_daftar_pelanggan.xml
+++ b/app/src/main/res/layout/activity_daftar_pelanggan.xml
@@ -52,7 +52,6 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="@dimen/paddingSmall"
                 android:drawableLeft="@drawable/ic_add"
-                android:drawableTint="@color/green_dark"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
@@ -77,11 +76,11 @@
             android:layout_marginTop="@dimen/paddingSmall"
             android:layout_marginRight="@dimen/paddingSmall"
             android:backgroundTint="@android:color/transparent"
+            android:singleLine="true"
             android:drawableLeft="@drawable/ic_search"
             android:drawablePadding="@dimen/paddingSmall"
             android:hint="@string/cari_pelanggan"
-            android:imeOptions="flagNoExtractUi|actionSearch"
-            android:singleLine="true" />
+            android:imeOptions="flagNoExtractUi|actionSearch" />
 
         <View
             android:layout_width="match_parent"
@@ -100,29 +99,29 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textSize="12sp"
                 android:text="@string/nama"
                 android:textAllCaps="true"
-                android:textSize="12sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.5"
+                android:layout_weight="1.4"
                 android:text="@string/alamat"
-                android:textAllCaps="true"
                 android:textSize="12sp"
+                android:textAllCaps="true"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="0dp"
+                android:textSize="12sp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/paddingXXXSmall"
                 android:layout_marginRight="@dimen/paddingXXXSmall"
                 android:layout_weight="0.3"
                 android:text="@string/poin"
                 android:textAllCaps="true"
-                android:textSize="12sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -130,17 +129,17 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.3"
                 android:text="@string/lp"
-                android:textAllCaps="true"
                 android:textSize="12sp"
+                android:textAllCaps="true"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
+                android:textSize="12sp"
                 android:text="@string/telepon"
                 android:textAllCaps="true"
-                android:textSize="12sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
