--- a/app/src/main/res/layout-land/activity_daftar_pesanan.xml
+++ b/app/src/main/res/layout-land/activity_daftar_pesanan.xml
@@ -76,7 +76,6 @@
                     android:id="@+id/tv_tambah_pesanan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawableTint="@color/green_dark"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
@@ -162,7 +161,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_data"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
+                    android:layout_height="match_parent"/>
             </RelativeLayout>
         </LinearLayout>
 
