--- a/app/src/main/res/layout-land/app_bar_main.xml
+++ b/app/src/main/res/layout-land/app_bar_main.xml
@@ -99,7 +99,6 @@
                                 android:layout_width="wrap_content"
                                 android:paddingBottom="@dimen/paddingLarge"
                                 android:layout_height="wrap_content"
-                                android:tint="@color/green_dark"
                                 android:layout_alignParentRight="true"
                                 android:layout_alignParentBottom="true"
                                 android:layout_marginRight="@dimen/paddingSmall"
@@ -162,11 +161,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
-                            android:layout_marginRight="@dimen/paddingSmall"
-                            android:tint="@color/green_dark"
+                            android:layout_marginRight="20dp"
                             android:paddingLeft="16dp"
                             android:paddingTop="14dp"
-                            android:paddingRight="16dp"
+                            android:paddingRight="1dp"
                             android:src="@drawable/ic_list_order"
                             android:text="Pondok Aren"
                             android:textStyle="bold" />
@@ -178,11 +176,13 @@
                             android:layout_alignParentRight="true"
                             android:layout_gravity="right|end|top"
                             android:layout_marginTop="3dp"
-                            android:layout_marginRight="@dimen/paddingMedium"
-                            android:background="@drawable/badge_background"
+                            android:layout_marginEnd="5dp"
+                            android:layout_marginRight="20dp"
                             android:gravity="center"
+                            android:background="@drawable/badge_background"
                             android:padding="3dp"
-                            android:text=""
+                            android:text="0"
+                            android:textStyle="bold"
                             android:textColor="@android:color/white"
                             android:textSize="10sp" />
 
@@ -250,7 +250,6 @@
                         android:background="@drawable/et_style2"
                         android:clickable="true"
                         android:drawableRight="@drawable/ic_laporan"
-                        android:drawableTint="@color/green_dark"
                         android:drawablePadding="@dimen/paddingXXXSmall"
                         android:editable="false"
                         android:focusable="false"
@@ -356,7 +355,6 @@
                             android:clickable="true"
                             android:drawableRight="@drawable/ic_laporan"
                             android:drawablePadding="@dimen/paddingXXXSmall"
-                            android:drawableTint="@color/green_dark"
                             android:editable="false"
                             android:focusable="false"
                             android:foreground="?attr/selectableItemBackground"
@@ -463,7 +461,6 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
-                        android:drawableTint="@color/green_dark"
                         android:drawableLeft="@drawable/ic_add"
                         android:drawablePadding="@dimen/paddingSmall"
                         android:focusable="true"
@@ -539,7 +536,7 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
-                        android:drawableTint="@color/green_dark"
+
                         android:drawablePadding="@dimen/paddingSmall"
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
@@ -612,7 +609,6 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
-                        android:drawableTint="@color/green_dark"
                         android:drawableLeft="@drawable/ic_add"
                         android:drawablePadding="@dimen/paddingSmall"
                         android:focusable="true"
@@ -738,7 +734,6 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
-                        android:drawableTint="@color/green_dark"
 
                         android:drawablePadding="@dimen/paddingSmall"
                         android:focusable="true"
@@ -968,7 +963,6 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
-                        android:drawableTint="@color/green_dark"
 
                         android:drawablePadding="@dimen/paddingSmall"
                         android:focusable="true"
@@ -1040,7 +1034,6 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
-                        android:drawableTint="@color/green_dark"
 
                         android:drawablePadding="@dimen/paddingSmall"
                         android:focusable="true"
@@ -1145,7 +1138,6 @@
                             android:layout_marginRight="@dimen/paddingSmall"
                             android:background="@drawable/et_style2"
                             android:clickable="true"
-                            android:drawableTint="@color/green_dark"
                             android:drawableRight="@drawable/ic_laporan"
                             android:drawablePadding="@dimen/paddingXXXSmall"
                             android:editable="false"
@@ -1302,7 +1294,6 @@
                             android:layout_marginRight="@dimen/paddingMedium"
                             android:clickable="true"
                             android:drawableLeft="@drawable/ic_add"
-                            android:drawableTint="@color/green_dark"
                             android:drawablePadding="@dimen/paddingSmall"
                             android:focusable="true"
                             android:foreground="?attr/selectableItemBackground"
@@ -1405,7 +1396,6 @@
                             android:layout_gravity="center"
                             android:layout_marginRight="@dimen/paddingSmall"
                             android:background="@drawable/et_style2"
-                            android:drawableTint="@color/green_dark"
                             android:clickable="true"
                             android:drawableRight="@drawable/ic_laporan"
                             android:drawablePadding="@dimen/paddingXXXSmall"
