--- a/app/src/main/res/layout-sw600dp/app_bar_main.xml
+++ b/app/src/main/res/layout-sw600dp/app_bar_main.xml
@@ -161,10 +161,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
-                            android:layout_marginRight="@dimen/paddingSmall"
+                            android:layout_marginRight="20dp"
                             android:paddingLeft="16dp"
                             android:paddingTop="14dp"
-                            android:paddingRight="16dp"
+                            android:paddingRight="1dp"
                             android:src="@drawable/ic_list_order"
                             android:text="Pondok Aren"
                             android:textStyle="bold" />
@@ -176,11 +176,13 @@
                             android:layout_alignParentRight="true"
                             android:layout_gravity="right|end|top"
                             android:layout_marginTop="3dp"
-                            android:layout_marginRight="@dimen/paddingMedium"
-                            android:background="@drawable/badge_background"
+                            android:layout_marginEnd="5dp"
+                            android:layout_marginRight="20dp"
                             android:gravity="center"
+                            android:background="@drawable/badge_background"
                             android:padding="3dp"
-                            android:text=""
+                            android:text="0"
+                            android:textStyle="bold"
                             android:textColor="@android:color/white"
                             android:textSize="10sp" />
 
