--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -81,7 +81,6 @@
                                 android:layout_marginRight="@dimen/paddingSmall"
                                 android:paddingLeft="16dp"
                                 android:paddingTop="16dp"
-                                android:tint="@color/green_dark"
                                 android:paddingRight="16dp"
                                 android:src="@drawable/ic_scan_barcode" />
 
@@ -165,12 +164,11 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
-                            android:layout_marginRight="@dimen/paddingSmall"
+                            android:layout_marginRight="20dp"
                             android:paddingLeft="16dp"
                             android:paddingTop="14dp"
-                            android:paddingRight="16dp"
+                            android:paddingRight="1dp"
                             android:src="@drawable/ic_list_order"
-                            android:tint="@color/green_dark"
                             android:text="Pondok Aren"
                             android:textStyle="bold" />
 
@@ -181,11 +179,13 @@
                             android:layout_alignParentRight="true"
                             android:layout_gravity="right|end|top"
                             android:layout_marginTop="3dp"
-                            android:layout_marginRight="@dimen/paddingMedium"
-                            android:background="@drawable/badge_background"
+                            android:layout_marginEnd="5dp"
+                            android:layout_marginRight="20dp"
                             android:gravity="center"
+                            android:background="@drawable/badge_background"
                             android:padding="3dp"
-                            android:text=""
+                            android:text="0"
+                            android:textStyle="bold"
                             android:textColor="@android:color/white"
                             android:textSize="10sp" />
 
@@ -255,7 +255,6 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:background="@drawable/et_style2"
                         android:clickable="true"
-                        android:drawableTint="@color/green_dark"
                         android:drawableRight="@drawable/ic_laporan"
                         android:drawablePadding="@dimen/paddingXXXSmall"
                         android:editable="false"
@@ -364,7 +363,6 @@
                             android:layout_gravity="center"
                             android:layout_marginRight="@dimen/paddingSmall"
                             android:background="@drawable/et_style2"
-                            android:drawableTint="@color/green_dark"
                             android:clickable="true"
                             android:drawableRight="@drawable/ic_laporan"
                             android:drawablePadding="@dimen/paddingXXXSmall"
@@ -475,7 +473,6 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
-                        android:drawableTint="@color/green_dark"
                         android:drawableLeft="@drawable/ic_add"
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
@@ -550,7 +547,6 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
-                        android:drawableTint="@color/green_dark"
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
                         android:textAllCaps="true"
@@ -623,7 +619,7 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
-                        android:drawableTint="@color/green_dark"
+
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
                         android:textAllCaps="true"
@@ -747,7 +743,6 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
-                        android:drawableTint="@color/green_dark"
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
                         android:textAllCaps="true"
@@ -976,7 +971,6 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
-                        android:drawableTint="@color/green_dark"
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
                         android:textAllCaps="true"
@@ -1046,7 +1040,6 @@
                         android:layout_marginRight="@dimen/paddingSmall"
                         android:clickable="true"
                         android:drawableLeft="@drawable/ic_add"
-                        android:drawableTint="@color/green_dark"
                         android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
                         android:textAllCaps="true"
@@ -1155,7 +1148,6 @@
                             android:layout_marginRight="@dimen/paddingSmall"
                             android:background="@drawable/et_style2"
                             android:clickable="true"
-                            android:drawableTint="@color/green_dark"
                             android:drawableRight="@drawable/ic_laporan"
                             android:drawablePadding="@dimen/paddingXXXSmall"
                             android:editable="false"
@@ -1270,7 +1262,6 @@
                             android:layout_marginRight="@dimen/paddingXLarge"
                             android:background="@drawable/et_style2"
                             android:clickable="true"
-                            android:drawableTint="@color/green_dark"
                             android:drawableRight="@drawable/ic_laporan"
                             android:drawablePadding="@dimen/paddingXXXSmall"
                             android:editable="false"
@@ -1430,7 +1421,6 @@
                             android:layout_centerVertical="true"
                             android:layout_marginRight="@dimen/paddingMedium"
                             android:clickable="true"
-                            android:drawableTint="@color/green_dark"
                             android:drawableLeft="@drawable/ic_add"
                             android:drawablePadding="@dimen/paddingSmall"
                             android:focusable="true"
