--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -33,11 +33,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/login"
-                android:textColor="@color/black"
-                android:textStyle="bold" />
+                android:textSize="@dimen/_12ssp"
+                android:fontFamily="@font/poppins_black"
+                android:textColor="@color/black" />
 
             <View
-                android:layout_width="@dimen/paddingXXXXLarge"
+                android:layout_width="@dimen/paddingXXXXXLarge"
                 android:layout_height="3dp"
                 android:background="@color/green_dark" />
 
@@ -45,7 +46,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingLarge"
+                android:layout_marginTop="@dimen/paddingXXLarge"
                 app:hintTextAppearance="@style/TextLabel"
                 app:passwordToggleEnabled="true">
 
@@ -54,15 +55,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/email"
+                    android:fontFamily="@font/poppins_regular"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="textEmailAddress"
+                    android:textSize="@dimen/_12ssp"
                     android:singleLine="true" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingLarge"
+                android:layout_marginTop="@dimen/paddingXXLarge"
                 app:hintTextAppearance="@style/TextLabel"
                 app:passwordToggleEnabled="true">
 
@@ -71,8 +74,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/kata_sandi"
+                    android:fontFamily="@font/poppins_regular"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="textPassword"
+                    android:textSize="@dimen/_12ssp"
                     android:singleLine="true"
                     android:textColorHint="@color/green_dark" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -81,9 +86,9 @@
                 android:id="@+id/btn_masuk"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingLarge"
+                android:layout_marginTop="@dimen/_25sdp"
                 android:background="@color/green_dark"
-                android:clickable="true"
+                android:fontFamily="@font/poppins_bold"
                 android:foreground="?attr/selectableItemBackground"
                 android:text="@string/masuk"
                 android:textColor="@color/white" />
@@ -91,14 +96,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingXXXXXLarge"
+                android:layout_marginTop="@dimen/paddingXXXXXXXLarge"
                 android:layout_marginBottom="@dimen/paddingLarge"
                 android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="0dp"
+                    android:fontFamily="@font/poppins_regular"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:textSize="@dimen/_12ssp"
                     android:text="@string/belum_memiliki" />
 
                 <TextView
@@ -110,6 +117,8 @@
                     android:paddingLeft="@dimen/paddingSmall"
                     android:paddingRight="@dimen/paddingSmall"
                     android:text="@string/daftar"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="@dimen/_12ssp"
                     android:textAllCaps="true"
                     android:textColor="@color/green_dark" />
             </LinearLayout>
